--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "8000:8000"
     volumes:
       - ./service:/service  
+
     environment:
       - DB_HOST=database
       - DB_NAME=dbname
@@ -28,3 +29,17 @@ services:
       - POSTGRES_DB=dbname
       - POSTGRES_USER=dbuser
       - POSTGRES_PASSWORD=pass
+  redis:
+    image: redis:7.2.4-alpine
+    hostname: redis
+
+  worker:
+    build:
+      context: .
+    hostname: worker
+    entrypoint: celery
+    command: -A celery_app.app worker --loglevel=info 
+    volumes:
+      - ./service:/service  
+    depends_on:
+      - redis  # Corrected from "reids"
