--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ djangorestframework==3.14.0
 django-cors-headers==4.3.1
 psycopg==3.1.8
 celery[redis]==5.3.6
+flower==2.0.1
+celery_singleton==0.3.1
